# cpp-lab2

./: .gitignore  CMakeLists.txt  command.cpp  command.hpp  data_stack.hpp  interpreter.cpp  interpreter.hpp  interpreter_error.hpp  interpreter_test.cpp  main.cpp
